# post-patch-postmortem

./: .coverage  .coveragerc  .gitignore  README.md  pyproject.toml
src/patch_tuesday/: __init__.py  bindiff_client.py  cli.py  database.py  extractor.py  models.py  msrc_client.py  winbindex_client.py
src/ppp/: bindiff_client.py  catalog_client.py  cli.py  config.py  database.py  extractor.py  models.py  winbindex_client.py  windows_versions.py  workflows.py
tests/: __init__.py  conftest.py  test_bindiff_client.py  test_catalog_client.py  test_cli.py  test_database.py  test_default_paths.py  test_extractor.py  test_models.py  test_msrc_client.py  test_winbindex_client.py
